test_programs/compile_failure/noirc_frontend_tests_wrong_type_in_for_range/src/main.nr

    pub fn foo() {
        for _ in true..false { 
                 
        }
    }
    